--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center>
-    <title>Prediction</title>
+    <title>Prediction Result</title>
     <link rel="stylesheet" href="../static/style.css">
    
     <body>
