--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 100px;
     padding: 0;
-    background-color:teal;
+    background-color:hsl(211, 74%, 56%);
     background-size: 300px 300px;
     justify-content: center;
     background-position:center;
@@ -14,7 +14,7 @@ body {
 h1 {
     text-align: center;
     margin-top: 50px;
-    color: white;
+    color:whitesmoke;
     text-transform: uppercase;
 }
 h5{
@@ -62,7 +62,7 @@ button {
 }
 
 button:hover {
-    background-color: #3e8de2;
+    background-color: hsl(211, 74%, 56%);
 }
 a{
     text-align: bottom;
