--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="../static/style.css">
    
     <body>
-    <h3>Prediction</h3>
     {%if target == 0 %}
-        <h2> This user will not buy from Social Network Ad</h2>
+        <h1>Prediction- Not Purchased</h1>
+        <h3>This user will not buy from Social Network Ad</h3>
         <body background="../static/download.jpeg">
 
-
-
     {%else%}
+        <h1>Prediction- Purchased</h1>
         <h3>This user will buy from Social Network Ad</h3>
         <body background="../static/download4.jpg">
 
@@ -43,14 +42,10 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <h5>Thank You!!! Visit Again!!!</h5>
 
 
     </body>
-<a href="/">go back to home page</a>
+    <a href="/">Go back to home page</a>
 
 </html>
